--- a/css/style.css
+++ b/css/style.css
@@ -111,8 +111,9 @@ margin: 3px;
 
 @media screen and (max-width: 768px){
   .list-choices{
-  visibility: hidden;
-  opacity: 0;
+   position: absolute;
+   visibility: hidden;
+   opacity: 0;
   }
 }
 
@@ -301,7 +302,7 @@ font-family: "Poppins", sans-serif;
 }
 .main .landing .landing-content .content h1 {
  
-  font-size: clamp(100px, 13vw, 200px);
+  font-size: clamp(70px, 13vw, 200px);
   font-family: "Anton", sans-serif;
   letter-spacing: 15px;
   color: white;
@@ -371,13 +372,15 @@ font-family: "Poppins", sans-serif;
   transition: visibility 0s, opacity 0.3s;
 }
 .amodal {
-  background: lightblue;
+  background:;
   height: 70%;
   width: 80%;
   position: relative;
   transition: visibility 0s, opacity 0.3s;
   /* flex */
 }
+
+
 .bgmodal .amodal i {
   color: rgb(46, 46, 46);
   font-size: 30px;
@@ -417,7 +420,14 @@ font-family: "Poppins", sans-serif;
   top: 0;
   height: 100px;
 }
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
+  .amodal {
+    height: 90%;
+    width: 80%;
+    position: relative;
+    transition: visibility 0s, opacity 0.3s;
+    /* flex */
+  }
   .bgmodal {
     height: 100%;
     width: 100%;
@@ -429,6 +439,7 @@ font-family: "Poppins", sans-serif;
   }
   .card-title {
     padding: 0;
+    margin: 0;
   }
   .input {
     max-width: 100%;
@@ -516,7 +527,20 @@ font-family: "Poppins", sans-serif;
   text-align: center;
   font-size: 2.5em;
 } */
+@media screen and (max-width: 425px){
+  .amodal {
+    
+    height: 90%;
+    width: 90%;
+  }
+  ._cardimg {
+    height: 50%;
+    width: 90%;
+    align-self: center;
+}
 
+
+}
 
 .footer {
   background: black;
